--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -2,7 +2,7 @@
   "name": "personal-portfolio",
   "homepage": "https://laurenruiz.github.io/personal-portfolio/",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emailjs/browser": "^4.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
