--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-portfolio",
-  "homepage": "https://laurenruiz.github.io/personal-portfolio",
+  "homepage": "https://laurenruiz.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
